operations/routing-a-b-test-v1-vs-v2/dev-api-gateway-destinationrule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-gateway
spec:
  host: api-gateway
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
