operations/routing-a-b-test-v1-vs-v2/dev-api-gateway-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-gateway-virtualservice
spec:
  hosts:
    - "*"  # It will only accept traffic for microservice1 host, not as any other host like localhost
  gateways:
    - api-gateway
  http:
    - route:
        - destination:
            host: api-gateway
            subset: v1
          weight: 50
        - destination:
            host: api-gateway
            subset: v2
          weight: 50
