operations/routing-a-b-test-v1-vs-v2/dev-microservice1-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: microservice1
spec:
  host: microservice1
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
