operations/routing-a-b-test-v1-vs-v2/dev-microservice1-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice1-virtualservice
spec:
  hosts:
    - microservice1   # It will only accept traffic for microservice1 host, not as any other host like localhost
  http:
    - route:
        - destination:
            host: microservice1
            subset: v1
          weight: 80
        - destination:
            host: microservice1
            subset: v2
          weight: 20
