operations/routing-a-b-test-v1-vs-v2/dev-microservice2-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice2-virtualservice
spec:
  hosts:
    - microservice2   # It will only accept traffic for microservice2 host, not as any other host like localhost
  http:
    - route:
        - destination:
            host: microservice2
            subset: v1
          weight: 10
        - destination:
            host: microservice2
            subset: v2
          weight: 90
