operations/routing-a-b-test-v1-vs-v2/dev-microservice3-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice3-virtualservice
spec:
  hosts:
    - microservice3   # It will only accept traffic for microservice3 host, not as any other host like localhost
  http:
    - route:
        - destination:
            host: microservice3
            subset: v1
          weight: 95
        - destination:
            host: microservice3
            subset: v2
          weight: 5
